# im_jax

./: pyproject.toml  readme.md
.github/workflows/: publish-pypi.yml
docs/: README.md  interpolation_benchmarks.ipynb
im_jax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_bicubic_api.py  test_bicubic_boundary_modes.py  test_bicubic_gradients.py  test_bicubic_jit_vmap.py  test_bicubic_performance_smoke.py  test_bicubic_reference.py
